--- a/css/style.css
+++ b/css/style.css
@@ -110,12 +110,11 @@ ul {
 
 
 /* ************ HEADER ************** */
-#header .container {
-  min-width: 480px;
-  width: 100%;
+#page-header .container {
+  max-width: 480px;
 }
 
-#header h1 {
+#page-header h1 {
   font-family: "Nerko One", cursive;
   font-weight: 400;
   font-style: normal;
@@ -126,12 +125,12 @@ ul {
 }
 
 /* ************ MAIN ************** */
-main .container {
-  min-width: 480px;
-  width: 100%;
+#content-main .container {
+  max-width: 480px;
 
   padding-top: var(--padding-top-20);
   padding-bottom: var(--padding-bottom-20);
+
   background-color: #F6F5F3;
 }
 
@@ -242,7 +241,7 @@ color: #4E3969;
 #presentation .presentation-img {
   height: auto;
   width: 300px;
-  text-align: center;
+ 
   margin-top: var(--margin-top-20);
   margin-bottom: var(--margin-bottom-20);
 }
@@ -256,4 +255,42 @@ color: #4E3969;
   font-weight: var(--font-weight)
 } 
 
-/* FOOTER */
+/* ************ FOOTER ************** */
+#page-footer {
+  background-color: #7C69A4;
+  color: white;
+
+  font-size: 12px;
+  text-align: center;
+}
+
+#page-footer .container {
+  max-width: 480px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+
+#page-footer .company-name {
+  font-weight: var(--font-weight);
+}
+
+#page-footer .company-name,
+#page-footer .company-address, 
+#page-footer .footer-links {
+  padding-top: var(--padding-top-20);
+}
+
+#page-footer .footer-links li {
+  display: inline-block;
+
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+}
+
+#page-footer .footer-links a {
+color: white;
+text-decoration: underline;
+}
